--- a/Resources/MailTemplates/mail_template_reset_password.html
+++ b/Resources/MailTemplates/mail_template_reset_password.html
@@ -1,57 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #FFFAEE;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            background-color: #1E1E25;
-            max-width: 600px;
-            margin: 20px auto;
-            padding: 20px;
-            border: 1px solid #FFFAEE;
-            border-radius: 8px;
-        }
-        h1 {
-            color: #FFFAEE;
-            line-height: 1.2;
-        }
-        p {
-            color: #FFFAEE;
-        }
-        a {
-            display: inline-block;
-            margin-top: 15px;
-            padding: 10px 20px;
-            background-color: #FFFAEE;
-            color: #1E1E25;
-            text-decoration: none;
-            font-weight: bold;
-            border-radius: 9999px;
-        }
-        .footer {
-            margin-top: 20px;
-            font-size: 0.9em;
-            color: #FFA217;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>🔒 Reset Your Password</h1>
-        <p>Hi there,</p>
-        <p>It looks like you requested to reset your password. No worries, we've got you covered! 😊</p>
-        <p>Your reset code is: <strong>{{RESET_PASSWORD_CODE}}</strong></p>
-        <p>⚡ Simply use this code on the password reset page to set up a new password and regain access to your account.</p>
-        <div class="footer">
-            <p>❗ If you did not request a password reset, please ignore this email or contact our support team for assistance.</p>
-            <p>🔐 Stay secure,<br>✨ The ShopTracker Team ✨</p>
+    <head>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                line-height: 1.6;
+                color: #fffaee;
+                margin: 0;
+                padding: 0;
+            }
+            .container {
+                background-color: #1e1e25;
+                max-width: 600px;
+                margin: 20px auto;
+                padding: 20px;
+                border: 1px solid #fffaee;
+                border-radius: 8px;
+            }
+            h1 {
+                color: #fffaee;
+                line-height: 1.2;
+            }
+            p {
+                color: #fffaee;
+            }
+            a {
+                display: inline-block;
+                margin-top: 15px;
+                padding: 10px 20px;
+                background-color: #fffaee;
+                color: #1e1e25;
+                text-decoration: none;
+                font-weight: bold;
+                border-radius: 9999px;
+            }
+            .footer {
+                margin-top: 20px;
+                font-size: 0.9em;
+                color: #ffa217;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container">
+            <h1>🔒 Reset Your Password</h1>
+            <p>Hi there,</p>
+            <p>
+                It looks like you requested to reset your password. No worries, we've got you
+                covered! 😊
+            </p>
+            <p>Your reset code is: <strong>{{RESET_PASSWORD_CODE}}</strong></p>
+            <p>
+                ⚡ Simply use this code on the password reset page to set up a new password and
+                regain access to your account.
+            </p>
+            <div class="footer">
+                <p>
+                    ❗ If you did not request a password reset, please ignore this email or contact
+                    our support team for assistance.
+                </p>
+                <p>🔐 Stay secure,<br />✨ The ShopTracker Team ✨</p>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
